--- a/index.html
+++ b/index.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculator</title>
+    <title>My Colculator</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <input class="inputA" type="number" />
-    <input class="inputB" type="number" />
-    <select class="selectOperation">
-      <option value="+">+</option>
-      <option value="-">-</option>
-      <option value="/">/</option>
-      <option value="*">*</option>
-    </select>
-    <button class="buttonRes">Result</button>
-    <p class="outputP"></p>
+    <div class="js-output"></div>
+    <div>
+      <input class="js-input-a" type="number" placeholder="0" />
+      <input class="js-input-b" type="number" placeholder="0" />
+      <select class="js-select-operation">
+        <option value="+">+</option>
+        <option value="-">-</option>
+        <option value="/">/</option>
+        <option value="*">*</option>
+      </select>
+      <button class="js-btn-result">Result</button>
+      <button class="js-btn-reset">Reset</button>
+    </div>
   </body>
   <script src="index.js"></script>
-  <script src="calculator.js"></script>
   <script src="math.js"></script>
+  <script src="calculator.js"></script>
 </html>
